# OOM-investigation-helpers

buddy_recorder/: .clang-format  CMakeLists.txt  main.cpp
buddy_recorder/include/: thread_safe_event.h
buddy_recorder/scripts/: buddy-generator.py
buddy_recorder/src/: main.cpp  thread_safe_event.cpp
